--- a/Documentation/netlink/specs/tc.yaml
+++ b/Documentation/netlink/specs/tc.yaml
@@ -199,7 +199,7 @@ definitions:
         name: Plog
         type: u8
       -
-        name: Scell_log
+        name: Scell-log
         type: u8
       -
         name: prio
@@ -218,7 +218,7 @@ definitions:
         name: DPs
         type: u32
       -
-        name: def_DP
+        name: def-DP
         type: u32
       -
         name: grio
