--- a/debian.oem/control.stub.in
+++ b/debian.oem/control.stub.in
@@ -47,7 +47,7 @@ Build-Depends:
  python3-setuptools,
  rsync [!i386] <!stage1>,
  rust-src:native [amd64 arm64 armhf ppc64el riscv64 s390x],
- rustc:native (>= 1.82) [amd64 arm64 armhf ppc64el riscv64 s390x],
+ rustc:native [amd64 arm64 armhf ppc64el riscv64 s390x],
  rustfmt:native [amd64 arm64 armhf ppc64el riscv64 s390x],
  uuid-dev <!stage1>,
  zstd <!stage1>,
